# examples

./: .gitignore  .gitpod.yml  CONTRIBUTING.md  README.md  TODO.md
aws-node-express-api-docker/: _app.env  _docker-slim.env  includefile  serverless.yml
aws_node_express_lambda/: .gitignore  _app.env  _docker-slim.env  custom-probe.json  includefile
dotnet_alpine/: .dockerignore  Dockerfile  README.md  _docker-slim.env
dotnet_aspnetcore_ubuntu/: Dockerfile  README.md  _docker-slim.env
dotnet_debian/: .dockerignore  Dockerfile  README.md  _docker-slim.env
dotnet_ubuntu/: Dockerfile  Makefile  README.md  _docker-slim.env
elixir_phx_standard/: README.md  _docker-slim.env  run_slim.command  run_slim_dbg.command
golang_alpine/: Dockerfile  README.md  _docker-slim.env  app.go  go.mod
golang_centos/: Dockerfile  README.md  _docker-slim.env  app.go  go.mod  slim.command
golang_gin_standard/: Dockerfile  README.md  _docker-slim.env
golang_standard/: Dockerfile  Makefile  README.md  _docker-slim.env  app.go  go.mod  slim.command  slim.dockerized.command
golang_ubuntu/: .dockerignore  Dockerfile  README.md  _docker-slim.env  app.go
hack/: assert-image-label.sh  assert-image-size.sh  common.mk  print-validate-image-size.sh  rules-docker-classic.mk  rules-docker-compose.mk
haskell_scotty_standard/: Dockerfile  README.md  _docker-slim.env
haskell_scotty_standard/service/: server.cabal
haskell_scotty_standard/service/src/: Main.hs
http_probe_cmd_file/: .dockerignore  Dockerfile  Makefile  README.md  _docker-slim.env  bodyData.json  probeCmds.json
(+508 files in other folders)
