name:                server
version:             0.1.0.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable server
  hs-source-dirs:   src
  main-is:          Main.hs
  build-depends:    base >=4.8 && <4.9
                    , scotty
                    , http-types
                    , aeson
  default-language: Haskell2010
