cabal-version:       2.2

name:                server
version:             0.1.0.0

category:            Web
build-type:          Simple

executable server
  hs-source-dirs:   src
  main-is:          Main.hs
  build-depends:    base >=4.17 && <4.18
                    , scotty
                    , http-types
                    , aeson
  default-language: Haskell2010
